changes to styling

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <header>Hello World</header>
+    <header>
+        <link rel="stylesheet" href="HeadingStyle.css">
+    </header>
 </html>
