--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html>
     <div>
         <link rel="stylesheet" href="LandingPage/HeadingStyle.css">
-        <header>
-            This is my website
-        </header>
+        <header>This is a indexing website</header>
         <p>
-            妳是我的冰淇淋adffsa
+          <link rel="next" href="./Calculus.html">
         </p>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftenor.com%2Fsearch%2Fshark-cute-gifs&psig=AOvVaw3-yLGLJcY-3BNqHVEZY2P0&ust=1693372533415000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCJjygbaOgYEDFQAAAAAdAAAAABAD" alt="Shark Cute Cartoon" style="width:48px; height:48px;">
     </div>
     
     
