Adding Calculus tab

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="LandingPage/HeadingStyle.css">
         <header>This is a indexing website</header>
         <p>
-          <link rel="next" href="./Calculus.html">
+        <a rel="next" href="./Calculus.html">Calculus</a>
         </p>
     </div>
     
