--- a/Calculus.html
+++ b/Calculus.html
@@ -1,9 +1,11 @@
-<<title>Calculus1115</title>
+<title>Calculus1115</title>
 <h3>Asymptotes</h3>
 <li>
-  <link rel="search" href="https://www.onlinemathlearning.com/horizontal-asymptotes.html">
+  <a href="https://www.onlinemathlearning.com/horizontal-asymptotes.html">horizontal-asymptotes<\a>
 
 </li>
 <li>
-  <link rel="search" href="https://www.onlinemathlearning.com/rational-functions.html">
+  <a href="https://www.onlinemathlearning.com/rational-functions.html">Rational Functions<\a>
 </li>
+
+<<a href="index.html"></a>
