Adding vertical Asymptote

--- a/Calculus.html
+++ b/Calculus.html
@@ -7,5 +7,8 @@
 <li>
   <a href="https://www.onlinemathlearning.com/rational-functions.html">Rational Functions<\a>
 </li>
+<<li>
+  <a href="https://www.youtube.com/watch?v=cjXseEPP9vc&t=19s">Vertical Asymptote</a>
+</li>
 
 <a href="index.html">back</a>
