--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <div>
-        <link rel="stylesheet" href="LandingPage/HeadingStyle.css">
-        <header>This is a indexing website</header>
-        <p>
-        <a rel="next" href="./Calculus.html">Calculus</a>
-        </p>
-    </div>
-    
-    
-</html>
+<meta http-equiv="refresh" content="0;url=23.16.168.192" />
