--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<meta http-equiv="refresh" content="0;url=23.16.168.192" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>GitHub Website</title>
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+  <body>
+    <h1>Header</h1>
+  </body>
+</html>
