--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <h1 style="text-align:center;top:50%">You're Gay</h1>
+    <h1 style="text-align:center;padding:10% 0">You're Gay</h1>
   </body>
 </html>
