--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GitHub Website</title>
-    <link href="css/style.css" rel="stylesheet">
+    <!--No style sheet yet<link href="css/style.css" rel="stylesheet">-->
   </head>
   <body>
     <h1 style="text-align:center;padding:10% 0">You're Gay</h1>
