--- a/index.html
+++ b/index.html
@@ -41,5 +41,11 @@
       <div class="item">
         <a href="https://neetcode.io/roadmap" class="btn-shine">NeetCode</a>
       </div>
+      <div class="item">
+        <a href="https://stackoverflow.com/" class="btn-shine">NeetCode</a>
+      </div>
+      <div class="item">
+        <a href="https://libgen.is/" class="btn-shine">NeetCode</a>
+      </div>
   </body>
 </html>
