update to names

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
       <link rel="stylesheet" href="./shinybutton.css">
       <!--1st Item Leetcode-->
       <div class="item">
-        <a href="https://leetcode.com/problemset/" class="btn-shine">LeetCode</a>
+        <a href="https://leetcode.com/problemset/" class="btn-shine">Leet Code</a>
       </div>
       <!--2nd Item NeetCode-->
       <div class="item">
-        <a href="https://neetcode.io/roadmap" class="btn-shine">NeetCode</a>
+        <a href="https://neetcode.io/roadmap" class="btn-shine">Neet Code</a>
       </div>
       <div class="item">
-        <a href="https://stackoverflow.com/" class="btn-shine">NeetCode</a>
+        <a href="https://stackoverflow.com/" class="btn-shine">Stack Overflow</a>
       </div>
       <div class="item">
-        <a href="https://libgen.is/" class="btn-shine">NeetCode</a>
+        <a href="https://libgen.is/" class="btn-shine">Libgen</a>
       </div>
   </body>
 </html>
