--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <style>
       body {
+        display:flex;
+        flex-direction: row;
         background-color: #0e1111;
         margin: 0;
         height: 100vh;
         width: 100vw;
-        align-content: center;
-        flex-direction: column;
 
       }
       .center {
