--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GitHub Website</title>
-    <!--No style sheet yet<link href="css/style.css" rel="stylesheet">-->
-  </head>
-  <body>
-    <div class="center">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>GitHub Website</title>
+  <!--No style sheet yet<link href="css/style.css" rel="stylesheet">-->
+</head>
+
+<body>
+  <link rel="stylesheet" href="./background.css">
+  <div class="containerWrapper" id="center">
+    <div class="container" id="center">
       <link rel="stylesheet" href="./shinybutton.css">
       <!--1st Item Leetcode-->
       <div class="item">
@@ -21,7 +25,10 @@
         <a href="https://stackoverflow.com/" class="btn-shine">Stack Overflow</a>
       </div>
       <div class="item">
-        <a href="https://libgen.is/" class="btn-shine">Libgen</a>
+        <a href="https://libgen.is/" class="btn-shine">libgen</a>
       </div>
-  </body>
+    </div>
+  </div>
+</body>
+
 </html>
