changes to buttons & style

--- a/index.html
+++ b/index.html
@@ -6,29 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GitHub Website</title>
   <!--No style sheet yet<link href="css/style.css" rel="stylesheet">-->
+  <link rel="stylesheet" href="./shinybutton.css">
+  <link rel="stylesheet" href="./background.css">
 </head>
 
 <body>
-  <link rel="stylesheet" href="./background.css">
-  <div class="containerWrapper" id="center">
-    <div class="container" id="center">
-      <link rel="stylesheet" href="./shinybutton.css">
+    <div class="card" id="center">
       <!--1st Item Leetcode-->
-      <div class="item">
-        <a href="https://leetcode.com/problemset/" class="btn-shine">Leet Code</a>
-      </div>
+      <a class="item item-1 button-28" href="https://leetcode.com/problemset/">LeetCode</a>
       <!--2nd Item NeetCode-->
-      <div class="item">
-        <a href="https://neetcode.io/roadmap" class="btn-shine">Neet Code</a>
-      </div>
-      <div class="item">
-        <a href="https://stackoverflow.com/" class="btn-shine">Stack Overflow</a>
-      </div>
-      <div class="item">
-        <a href="https://libgen.is/" class="btn-shine">libgen</a>
-      </div>
+      <a class="item item-2 button-28" href="https://neetcode.io/roadmap">Neet Code</a>
+      <a class="item item-3 button-28" href="https://stackoverflow.com/">Stack Overflow</a>
+      <a class="item item-4 button-28" href="https://libgen.is/">libgen</a>
+      <a class="item item-5 button-28" href="https://d2l.langara.bc.ca/d2l/home">d2l</a>
     </div>
-  </div>
 </body>
 
 </html>
