--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <a class="item item-3 button-28" href="https://stackoverflow.com/">Stack Overflow</a>
       <a class="item item-4 button-28" href="https://libgen.is/">libgen</a>
       <a class="item item-5 button-28" href="https://d2l.langara.bc.ca/d2l/home">d2l</a>
+      <br>
+      <a class="item item-6 button-28" href="https://github.com/">Github</a>
     </div>
 </body>
 
