--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a class="item item-5 button-28" href="https://d2l.langara.bc.ca/d2l/home">d2l</a>
       <br>
       <a class="item item-6 button-28" href="https://github.com/">Github</a>
-      <a href="./Advanced_IP_Scanner_2.5.4594.1.exe" download>labIPScanner</a>
+      <a class="item item-6 button-28" href="https://accounts.mheducation.com/connect/section/m-khatirinejad-fall-2024?app=newconnect.mheducation.com">MHEdu</a>
     </div>
 </body>
 
