--- a/index.html
+++ b/index.html
@@ -1,28 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GitHub Website</title>
-  <!--No style sheet yet<link href="css/style.css" rel="stylesheet">-->
-  <link rel="stylesheet" href="./shinybutton.css">
-  <link rel="stylesheet" href="./background.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
-    <div class="card" id="center">
-      <!--1st Item Leetcode-->
-      <a class="item item-1 button-28" href="https://leetcode.com/problemset/">LeetCode</a>
-      <!--2nd Item NeetCode-->
-      <a class="item item-2 button-28" href="https://neetcode.io/roadmap">Neet Code</a>
-      <a class="item item-3 button-28" href="https://stackoverflow.com/">Stack Overflow</a>
-      <a class="item item-4 button-28" href="https://libgen.is/">libgen</a>
-      <a class="item item-5 button-28" href="https://d2l.langara.bc.ca/d2l/home">d2l</a>
-      <br>
-      <a class="item item-6 button-28" href="https://github.com/">Github</a>
-      <a class="item item-6 button-28" href="https://accounts.mheducation.com/connect/section/m-khatirinejad-fall-2024?app=newconnect.mheducation.com">MHEdu</a>
+    <a href="./index.html"><h1>Shayu</h1></a>
+    <nav>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="#content2">About</a></li>
+            <li><a href="#content1">Projects</a></li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-braces" viewBox="0 0 16 16">
+                <path d="M2.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C3.25 2 2.49 2.759 2.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6M13.886 7.9v.163c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456V7.332c-1.114 0-1.49-.362-1.49-1.456V4.352C13.51 2.759 12.75 2 11.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6"/>
+                </svg></li>
+        </ul>
+    </nav>
+    <div class="center">
+        <div class="card1">
+            <div class="picture">
+                <div class="bgstrip">
+                    <div class="bg"></div>
+                </div>
+            </div>
+            <div class="text">
+                <h2>Header2 Text</h2>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis totam, sunt in, eum debitis tempore saepe repellendus recusandae necessitatibus porro quam sit minus pariatur dolore esse nesciunt cupiditate voluptas accusamus?</p>
+                <a href="./project1.html">View Project</a>
+            </div>
+        </div>
     </div>
-</body>
+    <div class="card2">
+        <div>
+            <h2>About me</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat velit voluptatum, nemo molestiae, aliquam ut, odit aliquid nobis dolorem fugiat consectetur in adipisci ducimus nulla eius vitae enim odio. Omnis!</p>
+        </div>
+    </div>
+    <div class="center">
+        <div class="card1">
+            <div class="text">
+                <h2>Movies</h2>
+                <hr>
+                <p>A personal archive designed to for aesthetics and go easy on the eyes late at night. Great Collection of Movies Featuring: Transformers Series.</p>
+                <a style="float: left" href="./movies.html">View Project</a>
+            </div>
+            <div class="picture">
+                <div id="movies">
+                </div>
+            </div>
+        </div>
+        <div class="card1">
+            <div class="text">
+                <h2>Notes Directory</h2>
+                <a style="float: left" href="./CPSC2140Notes.html">View</a>
 
+            </div>
+        </div>
+    </div>
+    <hr>
+    <footer>
+        <div id="info-wrapper">
+            <div class="info">
+                <a href="./index.html">Home</a>
+                <a href="#content2">About</a>
+                <a href="#content1">Projects</a>
+            </div>
+            <div class="info">
+                <a href="https://leetcode.com/problemset/">LeetCode</a>
+                <a href="https://neetcode.io/roadmap">Neet Code</a>
+                <a href="https://stackoverflow.com/">Stack Overflow</a>
+            </div>
+            <div class="info">
+                <a href="https://libgen.is/">libgen</a>
+                <a href="https://d2l.langara.bc.ca/d2l/home">d2l</a>
+                <a href="https://github.com/">Github</a>
+            </div>
+            <div class="info">
+                <a href="https://accounts.mheducation.com/connect/section/m-khatirinejad-fall-2024?app=newconnect.mheducation.com">MHEdu</a>
+            </div>
+        </div>
+        <br>
+        <p><i>justin.won1214+work@gmail.com</i></p>
+    </footer>
+</body>
 </html>
