--- a/card.html
+++ b/card.html
@@ -9,21 +9,65 @@
     <script>
         let date = new Date();
         $(document).ready(function() {
-            $('p').html(`${date.getFullYear()} - ${String(date.getDate()).padStart(2, '0')} `);
+            $('#date').html(`${date.getFullYear()} - ${String(date.getDate()).padStart(2, '0')} `);
         })
     </script>
     <style>
+        body {
+            display: grid;
+            padding: 10%;
+        }
         h2 {
-            /* color: black; */
-            text-shadow: 
-                    2px 2px 0 white,
-                    -2px 2px 0 white,
-                    2px -2px 0 white,
-                    -2px -2px 0 white,
-                    2px 0 0 white,
-                    -2px 0 0 white,
-                    0 2px 0 white,
-                    0 -2px 0 white;
+            color: black;
+            writing-mode: vertical-lr;
+            text-shadow:
+                    1px 1px 0 white,
+                    -1px 1px 0 white,
+                    1px -1px 0 white,
+                    -1px -1px 0 white,
+                    1px 0 0 white,
+                    -1px 0 0 white,
+                    0 1px 0 white,
+                    0 -1px 0 white;
+        }
+        footer {
+            height: 200px;
+            display: flex;
+            flex-direction: row;
+            gap: 2%;
+        }
+        footer button {
+            height: 100%;
+            flex: 1;
+            
+        }
+@keyframes wave-animation {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 0 100px;
+    }
+}
+
+
+
+
+        footer p {
+            flex: auto;
+            overflow: scroll;
+        }
+        footer p::-webkit-scrollbar {
+            display: none;
+        }
+        footer div {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+        }
+        footer div img {
+            border: 1px white solid;
+            height: 100%;
         }
     </style>
 </head>
@@ -38,10 +82,14 @@
         <div id="imgContainer">
             <img src="./img/subject.png" alt="subject">
         </div>
-
     </main>
     <footer>
-
+        <div>
+            <img src="./img/img1-removebg.png" alt="">
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quod eum magni quas exercitationem doloremque porro tempora quia adipisci. Nisi dolorem labore voluptatibus modi, praesentium inventore recusandae autem explicabo id.</p>
+        <button>
+        </button>
     </footer>
 </body>
 </html>
