--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/styleBackground.css">
     <script src="./js/audioControl.js" defer></script>
     <script src="./js/slideShow.js" defer></script>
+    <script src="./js/themeButton.js" defer></script>
+    <meta name="description" content="This is a portfolio page for CPSC1030, a introduction of my character featuring my favourite song and movies I've recently watched with links.">
 </head>
 <body>
     <img src="./img/earth.png" alt="earth" id="earth">
@@ -19,10 +21,10 @@
         <a href="./index.html">Home</a>
         <a href="./resume.html">Resume</a>
         <a href="./contacts.html">Contacts</a>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-braces" viewBox="0 0 16 16"><path d="M2.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C3.25 2 2.49 2.759 2.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6M13.886 7.9v.163c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456V7.332c-1.114 0-1.49-.362-1.49-1.456V4.352C13.51 2.759 12.75 2 11.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6"/></svg>
+        <button id="themeBtn" onclick="changeTheme();"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-braces" viewBox="0 0 16 16"><path d="M2.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C3.25 2 2.49 2.759 2.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6M13.886 7.9v.163c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456V7.332c-1.114 0-1.49-.362-1.49-1.456V4.352C13.51 2.759 12.75 2 11.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6"/></svg></button>
     </nav>
     <main>
-        <div class="borderAni-1 card-1" id="projects">
+        <div class="borderAni-1 card-1 projects">
             <div class="projectsCover">
                 <img src="./img/Img1BG.jpg" alt="cover">
                 <img src="./img/img1-removebg.png" alt="subject">
@@ -30,34 +32,30 @@
             <h2>Projects</h2>
             <hr class="hr-1">
             <p>Projects section, expand to see projects from CPSC1030.</p>
-            <button class="details"><a href="./projects.html">View Projects</a></button>
+            <button class="details" onclick="location.href='./projects.html'">View Project</button>
         </div>
         <div class="card-2" id="about">
             <h2>About</h2>
             <hr class="hr-1">
             <div id="profile">
-                <img src="./img/IMG_5275.png" alt="profilPicture" draggable="false">
-                <p>
-                    I am a 19 year old Student currently studying Computer Science at <i>Langara College Vancouver, Canada</i>. My programming experiences: Java, C++, HTML, CSS, and Python. My hobbies are Swimming and Weight Training, and I love travelling.
-                </p>
-            </div>
-            <div id="Instagram">
-                <div id="pfp">
-                    <a href="https://www.instagram.com/p/Cb_5PYYLvV1/" alt="InstagramLink"><img src="https://cdn.inflact.com/media/455677299_3811854912437536_2960811207732351607_n.jpg?url=https%3A%2F%2Fscontent.cdninstagram.com%2Fv%2Ft51.2885-19%2F455677299_3811854912437536_2960811207732351607_n.jpg%3Fstp%3Ddst-jpg_s150x150_tt6%26_nc_ht%3Dscontent.cdninstagram.com%26_nc_cat%3D104%26_nc_ohc%3DTby95dK3gmIQ7kNvgEmCR7i%26_nc_gid%3Dcb174698b0c84f0280e2b613a5a8fea5%26edm%3DAPs17CUBAAAA%26ccb%3D7-5%26oh%3D00_AYCNxw37RlAiL3Zf2aDNLHHmZqDus7GEAnEdT1De8MVjTw%26oe%3D675CFCCB%26_nc_sid%3D10d13b&time=1733767200&key=3f27b3b2b38ae5de5e6f7fc99642e63b" alt="InstagramProfilePicture"></a>
-                    <a href="https://www.instagram.com/p/Cb_5PYYLvV1/"><i class="fa-brands fa-instagram"></i>@Justin.Wang1214</a>
+                <img src="./img/IMG_5275.png" alt="profilPicture" draggable= "false">
+                <p>I am a 19 year old Student currently studying Computer Science at Langara College Vancouver, Canada. Also pursuing as a Lifeguard</p>    
+                <div>
+                    <b>My programming experiences:</b>
+                    <ul>
+                        <li>Java</li>
+                        <li>C++</li>
+                        <li>HTML & CSS</li>
+                        <li>Javascript</li>
+                        <li>Python</li>
+                    </ul>
+                    <b>My hobbies are:</b>
+                    <ul>
+                        <li>Swimming</li>
+                        <li>Weight Training</li>
+                        <li>I love travelling</li>
+                    </ul>
                 </div>
-                <ul id="gallery">
-                    <li><a href="./img/Media1.jpg"><img src="img/Media1.jpg" width="100" height="75" alt="SnowboardThumbnail">  
-                        <span><img src="img/Media1.jpg" width="400" height="300" alt="Snowboard"><br>Snowboard Picture</span></a>  
-                    </li>
-                    <li><a href="./img/Media2.jpg"><img src="img/Media2.jpg" width="100" height="75" alt="GraduationThumbnail">  
-                        <span><img src="img/Media2.jpg" width="auto" height="300" alt="Graduation"><br>Graduation Picture</span></a>  
-                    </li>
-                    <li>
-                        <a href="./img/VideoThumbnail.png"><img src="./img/VideoThumbnail.png" width="100" height="75" alt="VideoThumbnail">
-                            <span><video src="./video/Media3.mp4" width="auto" height="300" type="video/mp4" controls></video></span></a>
-                    </li>
-                </ul>
             </div>
             <h3>My Favourite Song</h3>
             <div class="slideshow-container">
@@ -87,7 +85,7 @@
             </div>
             <div id="audioContainer">
                 <audio>
-                    <source src="./audio/everything, everywhere (feat. eaJ).mp3" type="audio/mpeg">
+                    <source src="./audio/everythingEverywhere.mp3" type="audio/mpeg">
                 </audio>
                 <button class="play-pause">
                     <i class="fa fa-play"></i>
@@ -95,7 +93,7 @@
                 </button>
                 <input type="range" name="TrackTime" id="TrackTime" min="0" value="0" step="0.1">
                 <p id="timeline"></p>
-                <div id="VolumeContainer"></i><input type="range" name="Volume" id="Volume" min="0" max="100" value="50"><i id="volumeIcon" class="fa-solid fa-volume-high"></i></div>
+                <div id="VolumeContainer"><input type="range" name="Volume" id="Volume" min="0" max="100" value="50"><i id="volumeIcon" class="fa-solid fa-volume-high"></i></div>
             </div>
             <details id="lyrics">
                 <summary>Lyrics</summary>
@@ -157,14 +155,14 @@ You follow me like a shadow
 
 
         </div>
-        <div class="borderAni-1 card-1" id="projects">
+        <div class="borderAni-1 card-1 projects">
             <div class="projectsCover">
                 <img src="https://preview.redd.it/what-decade-of-cinema-have-you-watched-the-most-movies-i-v0-i6jbfewtqqoa1.jpg?width=640&crop=smart&auto=webp&s=14c2ddd38147a671169064eb7608ee9d9cdcbf8e" alt="cover">
             </div>
             <h2>Shows</h2>
             <hr class="hr-1">
             <p>See Shows and Movies. Enjoy 1080p movies without delay. Controls are work in progress.</p>
-            <button class="details"><a href="movies.html">See More</a></button>
+            <button class="details" onclick="location.href='movies.html'">See More</button>
         </div>
     </main>
     <footer>
