--- a/movies.html
+++ b/movies.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This page is for movies where it creates dynamically creates a web page using javascript to watch movies.">
     <title>Movies</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/movieStyle.css">
+    <script src="./js/themeButton.js" defer></script>
 </head>
 <body>
     <header>
@@ -15,7 +17,7 @@
         <a href="./index.html">Home</a>
         <a href="./resume.html">Resume</a>
         <a href="./contacts.html">Contacts</a>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-braces" viewBox="0 0 16 16"><path d="M2.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C3.25 2 2.49 2.759 2.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6M13.886 7.9v.163c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456V7.332c-1.114 0-1.49-.362-1.49-1.456V4.352C13.51 2.759 12.75 2 11.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6"/></svg>
+        <button id="themeBtn" onclick="changeTheme();"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-braces" viewBox="0 0 16 16"><path d="M2.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C3.25 2 2.49 2.759 2.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6M13.886 7.9v.163c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456V7.332c-1.114 0-1.49-.362-1.49-1.456V4.352C13.51 2.759 12.75 2 11.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6"/></svg></button>
     </nav>
     <main>
         <div class="center">
@@ -27,7 +29,7 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi. Sequi vitae dolorum unde est repudiandae, odit necessitatibus labore aliquam praesentium ipsa, numquam, autem in porro enim voluptas fugit accusantium!
                         </p>
-                        <a class="videoLink" alt="Bumblebee" data-video-file="" href="#">
+                        <a class="videoLink" data-video-file="" href="#">
                             Watch Movie
                         </a>
                     </div>
@@ -39,7 +41,7 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi. Sequi vitae dolorum unde est repudiandae, odit necessitatibus labore aliquam praesentium ipsa, numquam, autem in porro enim voluptas fugit accusantium!
                         </p>
-                        <a class="videoLink" alt="Rise Of The Beasts" data-video-file="" href="#">
+                        <a class="videoLink" data-video-file="" href="#">
                             Watch Movie
                         </a>
                     </div>
@@ -51,7 +53,7 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi. Sequi vitae dolorum unde est repudiandae, odit necessitatibus labore aliquam praesentium ipsa, numquam, autem in porro enim voluptas fugit accusantium!
                         </p>
-                        <a class="videoLink" alt="Transformers" data-video-file="" href="#">
+                        <a class="videoLink" data-video-file="" href="#">
                             Watch Movie
                         </a>
                     </div>
@@ -63,7 +65,7 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi. Sequi vitae dolorum unde est repudiandae, odit necessitatibus labore aliquam praesentium ipsa, numquam, autem in porro enim voluptas fugit accusantium!
                         </p>
-                        <a class="videoLink" alt="Revenge Of The Fallen" data-video-file="" href="#">
+                        <a class="videoLink" data-video-file="" href="#">
                             Watch Movie
                         </a>
                     </div>
@@ -75,7 +77,7 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi. Sequi vitae dolorum unde est repudiandae, odit necessitatibus labore aliquam praesentium ipsa, numquam, autem in porro enim voluptas fugit accusantium!
                         </p>
-                        <a class="videoLink" alt="Dark of The Moon" data-video-file="" href="#">
+                        <a class="videoLink" data-video-file="" href="#">
                             Watch Movie
                         </a>
                     </div>
@@ -87,7 +89,7 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi. Sequi vitae dolorum unde est repudiandae, odit necessitatibus labore aliquam praesentium ipsa, numquam, autem in porro enim voluptas fugit accusantium!
                         </p>
-                        <a class="videoLink" alt="Age of Extinction" data-video-file="" href="#">
+                        <a class="videoLink" data-video-file="" href="#">
                             Watch Movie
                         </a>
                     </div>
@@ -99,7 +101,7 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, animi. Sequi vitae dolorum unde est repudiandae, odit necessitatibus labore aliquam praesentium ipsa, numquam, autem in porro enim voluptas fugit accusantium!
                         </p>
-                        <a class="videoLink" alt="The Last Knight" data-video-file="" href="#">
+                        <a class="videoLink" data-video-file="" href="#">
                             Watch Movie
                         </a>
                     </div>
