--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <title>Projects</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/templateWindow.js" defer></script>
+    <script src="./js/themeButton.js" defer></script>
 </head>
 <body>
     <header>
@@ -16,25 +17,83 @@
         <a href="./index.html">Home</a>
         <a href="./resume.html">Resume</a>
         <a href="./contacts.html">Contacts</a>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-braces" viewBox="0 0 16 16"><path d="M2.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C3.25 2 2.49 2.759 2.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6M13.886 7.9v.163c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456V7.332c-1.114 0-1.49-.362-1.49-1.456V4.352C13.51 2.759 12.75 2 11.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6"/></svg>
+        <button id="themeBtn" onclick="changeTheme();"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-braces" viewBox="0 0 16 16"><path d="M2.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C3.25 2 2.49 2.759 2.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6M13.886 7.9v.163c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456V7.332c-1.114 0-1.49-.362-1.49-1.456V4.352C13.51 2.759 12.75 2 11.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6"/></svg></button>
     </nav>
     <main>
-        <div class="card-1 borderAni-1">
+        <div class="card-1 borderAni-1" style="display: flex; flex-direction: column; align-items: center;">
             <details>
             <Summary>CPSC1030</Summary>
             Students will examine the structure of the internet and the World Wide Web and how they work; design and implement professional interactive websites using styles in CSS. Topics include design principles, image manipulation, and simple CGI scripting. Explore innovative trends that use the internet as a computing platform.
             <a href="https://langara.ca/programs-and-courses/courses/CPSC/1030.html">More</a>
             </details>
             <card-2>
+                <h3>Lab 1</h3>
+                <ul>
+                    <li><a href="./Projects/Completed/Lab1.pdf">Download</a></li>
+                </ul>
+            </card-2>
+            <card-2>
+                <h3>Lab 2</h3>
+                <ul>
+                    <li><a href="./Projects/Completed/Lab2.zip">Download</a></li>
+                </ul>
+            </card-2>
+            <card-2>
+                <h3>Lab 3</h3>
+                <ul>
+                    <li><a href="./Projects/Completed/Justin_Lab3.zip">Download</a></li>
+                </ul>
+            </card-2>
+            <card-2>
+                <h3>Lab 4</h3>
+                <ul>
+                    <li><a href="./Projects/Completed/_JustinWang_Lab4.zip">Download</a></li>
+                </ul>
+            </card-2>
+            <card-2>
+                <h3>Lab 5</h3>
+                <ul>
+                    <li><a href="./Projects/Completed/Lab5.pdf">Download</a></li>
+                </ul>
+            </card-2>
+            <card-2>
                 <h3>Lab 6</h3>
-                <a href="./Projects/Lab6.pdf" class="details instructions" alt="Lab6">details</a>
-                <ul id="gallery">
-                    <li><a href="Projects/smallScreen.png"><img src="Projects/smallScreen.png" width="100" height="75" alt="Small Screen example">  
-                        <span><img src="Projects/smallScreen.png" width="400" height="300" alt="Small Screen Example"><br>Small Screen Example</span></a>  
-                    </li>
-                    <li><a href="Projects/bigScreen.png"><img src="Projects/bigScreen.png" width="100" height="75" alt="Big Screen example">  
-                        <span><img src="Projects/bigScreen.png" width="400" height="300" alt="Big Screen Example"><br>Big Screen Example</span></a>  
-                    </li>
+                <a href="./Projects/Lab6.pdf" class="details instructions">details</a>
+                <ul>
+                    <li><a href="./Projects/Completed/lab6.zip">Download</a></li>
+                </ul>
+            </card-2>
+            <card-2>
+                <h3>Lab 7</h3>
+                <ul>
+                    <li><a href="./Projects/Completed/lab7.zip">Download</a></li>
+                </ul>
+            </card-2>
+            <card-2>
+                <h3>Lab 8</h3>
+                <ul>
+                    <li><a href="./Projects/Completed/Lab8.zip">Download</a></li>
+                </ul>
+            </card-2>
+            <card-2>
+                <h3>Lab 9</h3>
+                <ul>
+                    <li><a href="./Projects/Completed/Lab9.zip">Download</a></li>
+                </ul>
+            </card-2>
+            <card-2>
+                <h3>Lab 10</h3>
+                <ul>
+                    <li><a href="./Projects/Completed/Lab10.zip">Download</a></li>
+                </ul>
+            </card-2>
+        </div>
+        <div class="card-1 borderAni-1" style="display: flex; flex-direction: column; align-items: center;">
+            <card-2>
+                <h3>Course Project</h3>
+                <ul>
+                    <li><a href="./Projects/Completed/ProjectInstruction.pdf">Download Project Instruction</a></li>
+                    <li><a href="./Projects/Completed/Evaluation_Item_Rubrics.pdf">Download Project Rubric</a></li>
                 </ul>
             </card-2>
         </div>
